# Regression_Challenge_3-Walmart

./: Prj-SalesForescasting.ipynb  model_comparison_notebook_limpio.ipynb  pyproject.toml
outputs/baselines/adaboost/: config.json  metrics.csv  oof.parquet  test.parquet
outputs/baselines/elastic_net/: config.json  metrics.csv  test.parquet
outputs/baselines/ets/: config.json  metrics.csv  test.parquet
outputs/baselines/random_forest/: config.json  metrics.csv  test.parquet
outputs/metrics/: local_linear_config.json  local_linear_cv.csv
outputs/phase1_local_linear_lite/metrics/: local_linear_config.json  local_linear_cv.csv
outputs/phase1_local_linear_lite/submissions/: local_linear_submission.csv
outputs/phase2_structural_ar/metrics/: structural_ar_config.json  structural_ar_cv.csv
outputs/preds/: local_linear_test.parquet
outputs/search/phase1/: best_config.json  (+1 more)
outputs/submissions/: local_linear_submission.csv
walmart-recruiting-store-sales-forecasting/: README.md  eda.ipynb  models_idea_for_gaussian_process.txt  models_ideas_for_local_linear_regression.txt  phases.md  pyproject.toml  test_feat.parquet  time_series_pymc.txt  train_feat.parquet
walmart-recruiting-store-sales-forecasting/report/: model_comparison.qmd  model_comparison_notebook_ready.qmd
walmart-recruiting-store-sales-forecasting/scripts/: baseline_utils.py  phase1_grid_search.py  phase1_local_linear.py  phase2_hsgp.py  phase2_structural_ar.py  phase2_structural_ar_map_vs_chains.py  phase3_elastic_net.py  phase4_random_forest.py  phase5_ets.py  phase6_adaboost.py
(+84 files in other folders)
