[project]
name = "machine-learning-utec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.2",
    "dask>=2026.1.2",
    "ipykernel>=7.1.0",
    "jax[cuda12]>=0.9.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "numpyro>=0.20.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=23.0.0",
    "pymc>=5.27.1",
    "pytensor>=2.37.0",
    "quarto>=0.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
